# genki-cad

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
light_blocker/: light_blocker.py
src/ocp_watch/: __init__.py
stamp_holder/: stamp_holder.py  stamp_jig.py
stamp_puck/: stamp_puck.py
